--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.1.0-",
+    "@angular/animations": "^12.1.5",
     "@angular/cdk": "^12.2.2",
     "@angular/common": "~12.1.0-",
     "@angular/compiler": "~12.1.0-",
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "~12.1.0-",
     "@angular/router": "~12.1.0-",
     "jquery": "^3.6.0",
+    "primeicons": "^4.1.0",
+    "primeng": "^11.4.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -39,5 +41,10 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.3.2"
-  }
+  },
+  "styles": [
+    "node_modules/primeng/resources/themes/saga-blue/theme.css",
+    "node_modules/primeng/resources/primeng.min.css",
+    "node_modules/primeicons/primeicons.css"
+  ]
 }
