--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~12.1.0-",
     "@angular/router": "~12.1.0-",
     "jquery": "^3.6.0",
+    "primeflex": "^3.0.1",
     "primeicons": "^4.1.0",
     "primeng": "^11.4.5",
     "rxjs": "~6.6.0",
